[package]
name = "sysinfo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
actix-web = "4.4.0"
superslice = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
